tests/parsing/fail/unbalanced_parens.circom
pragma circom 2.0.6;

template T() {
    var a = (1;
}

component main = T();
